objects/dgAI2__DG_Model__c.object
<CustomObject>
    <fields>
        <fullName>dgAI2__Confidence_Threshold__c</fullName>
        <description>Set a prediction Confidence Threshold. Predictions above this threshold will prefill fields. Predictions below this threshold will not prefill fields.</description>
        <inlineHelpText>Set a prediction Confidence Threshold. Predictions above this threshold will prefill fields. Predictions below this threshold will not prefill fields.</inlineHelpText>
        <label>Confidence Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>dgAI2__DG_Model_ID__c</fullName>
        <description>This is the external ID for this Model in the DigitalGenius system.</description>
        <inlineHelpText>This is the external ID for this Model in the DigitalGenius system.</inlineHelpText>
        <label>DG Model ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Description__c</fullName>
        <description>Please describe the DigitalAgent Model.</description>
        <inlineHelpText>Please describe the DigitalAgent Model.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this DigitalAgent Model been archived?</description>
        <inlineHelpText>Has this DigitalAgent Model been archived?</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dgAI2__Object_API_Name__c</fullName>
        <description>Salesforce object API name this Model is for.</description>
        <inlineHelpText>Salesforce object API name this Model is for.</inlineHelpText>
        <label>Object API Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Priority_Sequence__c</fullName>
        <description>Priority Sequence order for DigitalAgent Models.</description>
        <inlineHelpText>Priority Sequence order for DigitalAgent Models.</inlineHelpText>
        <label>Priority Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dgAI2__Status__c</fullName>
        <description>Training Status for DigitalAgent Model from the DigitalGenius system. This will indicate when the DigitalAgent Model is available for predicting field values.</description>
        <inlineHelpText>Training Status for DigitalAgent Model from the DigitalGenius system. This will indicate when the DigitalAgent Model is available for predicting field values.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>incomplete</fullName>
                </value>
                <value>
                    <fullName>uploading</fullName>
                </value>
                <value>
                    <fullName>ready_for_training</fullName>
                </value>
                <value>
                    <fullName>training</fullName>
                </value>
                <value>
                    <fullName>available</fullName>
                </value>
                <value>
                    <fullName>updating</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DG Model</label>
    <listViews>
        <fullName>dgAI2__All</fullName>
        <columns>NAME</columns>
        <columns>dgAI2__Object_API_Name__c</columns>
        <columns>dgAI2__Priority_Sequence__c</columns>
        <columns>dgAI2__Confidence_Threshold__c</columns>
        <columns>dgAI2__DG_Model_ID__c</columns>
        <columns>dgAI2__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DG Model</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>